Update jvm.ps1